Course Description & Input Select

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -22,10 +22,10 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 	background-color: $gray;
 
-	// sticky footer
-	display: flex;
-	flex-direction: column;
-	justify-content: space-between;
+	// // sticky footer
+	// display: flex;
+	// flex-direction: column;
+	// justify-content: space-between;
 }
 
 
