--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -9,5 +9,6 @@ header
 			.navbar-start
 				a.navbar-item(href='/') Home
 				a.navbar-item(href='/courses') Courses
-				a.navbar-item(href='/contact') Contact
+				a.navbar-item(href='/team') Team
+				a.navbar-item(href='/faq') FAQ
 				a.navbar-item(href='/auth') Sign In
