--- a/styles/base.scss
+++ b/styles/base.scss
@@ -164,3 +164,18 @@ table {
 	}
 }
 
+// 404 Page
+.not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img {
+    max-width: 400px;
+    margin-bottom: 10px;
+  }
+  h2 {
+    margin-bottom: 0;
+  }
+  padding: 50px 0;
+  // background-color: $blueBlack;
+}
