--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -5,21 +5,28 @@ block head
 
 block content
   .catalog
-    section.hero.hero-overlay
-      .container
-        h2 Courses This Sem
-        .courses
-          each course in courses
-            .card
-              .card-header
-                img(src=course.coverImage, alt="Thumbnail")
-                h2 #{course.name}
-              .card-body
-                if course.description.length == 122
-                  p #{course.description}
-                    a(href='/courses/'+course.id + '/view/') (more)
-                else
-                  p #{course.description}
-              .card-footer
-                a.regBtn(href='/courses/' + course.id + '/view/')
-                  button.secondary View
+    if courses.length > 0
+      section.hero.hero-overlay
+        .container
+          h2 Courses This Sem
+          .courses
+            each course in courses
+              .card
+                .card-header
+                  img(src=course.coverImage, alt="Thumbnail")
+                  h2 #{course.name}
+                .card-body
+                  if course.description.length == 122
+                    p #{course.description}
+                      a(href='/courses/'+course.id + '/view/') (more)
+                  else
+                    p #{course.description}
+                .card-footer
+                  a.regBtn(href='/courses/' + course.id + '/view/')
+                    button.secondary View
+    else
+      .not-found
+        img(src='/images/empty.png')
+        h2 There's nothing here yet.
+        p Stay tuned for updates.
+  
