Fix Inputs & Add Course

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -176,6 +176,9 @@ table {
   h2 {
     margin-bottom: 0;
   }
+  button {
+    margin-top: 20px;
+  }
   padding: 50px 0;
   // background-color: $blueBlack;
 }
