--- a/public/stylesheets/course.scss
+++ b/public/stylesheets/course.scss
@@ -7,7 +7,12 @@
 	button {
 		width: 120px;
 		margin-bottom: 15px;
-	}
+  }
+  #heading {
+    color: #fff;
+    margin-top: 1.4em;
+    margin-bottom: .5em;
+  }
 }
 .courses {
   display: flex;
