--- a/views/course.pug
+++ b/views/course.pug
@@ -13,7 +13,7 @@ block content
 					div
 						img(src=course.coverImage, alt="Thumbnail")
 						.controls
-							a(href='/courses/' + course.id + '/register/')
+							a(href='/courses/' + course._id + '/register/')
 								button.primary Register
 							a(href=course.handout)
 								button.secondary View Handout
