--- a/views/404.pug
+++ b/views/404.pug
@@ -5,4 +5,4 @@ block content
     img(src='/images/empty.png')
     h2 Not Found
     p Explore 
-      a(href='/explore') Courses
+      a(href='/courses') Courses
