--- a/styles/base.scss
+++ b/styles/base.scss
@@ -202,3 +202,12 @@ table {
   padding: 50px 0;
   // background-color: $blueBlack;
 }
+
+#terms {
+	padding: 10px 20px;
+	li {
+		margin: 10px 0;
+		line-height: 1.4em;
+	}
+	background-color: #fff;
+}
