--- a/styles/include/_form.scss
+++ b/styles/include/_form.scss
@@ -1,4 +1,4 @@
-input, textarea {
+input[type="text"], input[type="number"], input[type="password"], textarea {
 	display: block;
 	margin: 10px 0;	
 }
