--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -2,6 +2,7 @@ extends layout
 
 block head
   link(rel='stylesheet', href='/stylesheets/course.css')
+  title Courses | CTE
 
 block content
   .catalog
