--- a/views/course.pug
+++ b/views/course.pug
@@ -3,6 +3,7 @@ extends layout
 
 block head
 	link(rel='stylesheet', href='/stylesheets/course.css')
+	title #{course.name} | CTE
 
 block content
 	section.hero
