--- a/views/index.pug
+++ b/views/index.pug
@@ -3,6 +3,7 @@ extends layout
 
 block head
 	link(rel='stylesheet', href='/stylesheets/home.css')
+	title CTE BITS Goa
 
 block content
 	section.hero
