--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,9 +1,11 @@
 doctype html
 html
 	head
-		title= title
 		link(rel='stylesheet', href='/stylesheets/main.css')
+		script(src='/javascripts/nav.js')
 		block head
+			title CTE
+
 	body
 		main
 			include include/header.pug
