--- a/public/stylesheets/course.scss
+++ b/public/stylesheets/course.scss
@@ -4,13 +4,15 @@
 //
 
 .catalog {
+	position: relative;
 	button {
 		width: 120px;
 		margin-bottom: 15px;
   }
   #heading {
-    color: #fff;
-    margin-top: 1.4em;
+		color: #fff;
+		margin-top: 0;
+    padding-top: 1.4em;
     margin-bottom: .5em;
   }
 }
@@ -26,6 +28,9 @@
 
 .course-hero {
 	display: flex;
+	@media screen and (max-width: 920px) {
+		flex-direction: column;
+	}
 	img {
 		max-width: 400px;
 	}
@@ -39,7 +44,11 @@
 		}
 	}
 	.info {
+		@media screen and (max-width: 920px) {
+			margin: 20px 0;
+		}
 		margin: 0 40px;
+
 		p {
 			margin-top: 0;
 		}
@@ -50,7 +59,7 @@
 	background-color: #fff;
 	box-shadow: 0 0 2px 0 rgba(0,0,0,0.35);
 	width: 375px;
-  margin: 20px;
+	margin: 20px;
   
 	.card-header {
 		text-align: center;
@@ -73,10 +82,19 @@
 }
 
 .course-info .container {
-  display: flex;
-  .card {
-    padding: 15px 30px;
+	display: flex;
+
+	@media screen and (max-width: 960px){
+		flex-direction: column;		
 	}
+
+  .card {
+		padding: 15px 30px;
+		@media screen and (max-width: 1200px){
+			width: 280px;	
+		}
+	}
+
 	#description {
 		width: 100%;
 		margin-left: 0;
@@ -84,6 +102,7 @@
 			white-space: pre-line;
 		}
 	}
+
   h3 {
     margin: .5em 0;
 	}
