--- a/styles/include/_vars.scss
+++ b/styles/include/_vars.scss
@@ -9,3 +9,21 @@ $darkGray: #999;
 
 // Animation
 $animTime: .3s;
+
+$minSupportedWidth: 360px;
+$maxSupportedWidth: 1280px;
+//
+// Fluid Typography
+//
+@mixin fluidType($min, $max) {
+	font-size: $min;
+
+	@media screen and (min-width: $minSupportedWidth) {
+		// 960 = 1280-320
+		font-size: calc(#{$min} + #{($max - $min)/1px} * ((100vw - 320px) / 960));
+	}
+
+	@media screen and (min-width: $maxSupportedWidth) {
+		font-size: $max;
+	}
+}
