--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
 	section.white
 		h2.section-title 
 			span What we do
-		p.section-desc Lorem ipsum dolor sit, amet consectetur adipisicing elit. Debitis dolore veritatis saepe ad possimus eum fugit optio nemo cumque, porro consectetur ipsa sunt dolores ipsum exercitationem earum nihil rem dolorem!
+		p.section-desc Center for Technical Education is a technical organisation of BITS Pilani, Goa Camus. Our motive is to enhance the technical culture on campus. We conduct courses and workshops, host technical competitions, offer financial assistance to technical clubs and projects and organize academic help sessions
 		.container
 			.grid-items
 				div 
@@ -25,23 +25,23 @@ block content
 
 				div 
 					h4 AAP
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste fugiat corporis, earum cumque vero repudiandae voluptatibus quidem sequi quibusdam magni dolore aliquam sint unde animi delectus hic qui odio!
+					p  A relatively new initiative, the Academic Assistance Programme has been a huge success in helping the students of BITS Goa grasp concepts, cover difficult problems and achieve excellence in class courses. The initiative empowers students to ask doubts and encounter problems under the guidance of highly motivated student mentors
 
 				div 
 					h4 Tech Weekend
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste fugiat corporis, earum cumque vero repudiandae voluptatibus quidem sequi quibusdam magni dolore aliquam sint unde animi delectus hic qui odio!
+					p To promote the technical culture on campus, CTE, in collaboration with other technical clubs on campus, organizes a weekend filled with hackathons and competitions. These events range from fields like finance to aero-space and helps students relax while encouraging healthy competition
 
 				div 
 					h4 Schooling
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste fugiat corporis, earum cumque vero repudiandae voluptatibus quidem sequi quibusdam magni dolore aliquam sint unde animi delectus hic qui odio!
+					p Breaking boundaries and expectations as we expand beyond the walls of our campus and take up workshops and educational seminars in nearby schools, providing students with an early insight and piquing their interest in the current scenario of the technical world and it’s many opportunities 
 
 				div 
 					h4 CCE
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste fugiat corporis, earum cumque vero repudiandae voluptatibus quidem sequi quibusdam magni dolore aliquam sint unde animi delectus hic qui odio!
+					p  CTE has extended it’s reach beyond technical courses as it introduces cultural courses like music and drama to it’s catalogue. This new initiative has seen wide ranging support and is bound to reach new heights as more and more clubs and departments join the initiative
 
 				div 
 					h4 Project Fundings
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste fugiat corporis, earum cumque vero repudiandae voluptatibus quidem sequi quibusdam magni dolore aliquam sint unde animi delectus hic qui odio!
+					p  At Center for Technical Education, we believing in lending active support to creativity and innovation. CTE funds upto 10 projects with support upto Rs 40,000 to help student teams contribute to the development of technical culture on campus.
 
 	section.gray
 		h2.section-title
@@ -69,7 +69,7 @@ block content
 	section.white
 		h2.section-title
 			span Why collaborate with us?
-		p.section-desc Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique obcaecati pariatur debitis voluptates in reiciendis beatae hic temporibus odit eligendi, cumque, possimus facilis dolores suscipit dignissimos maxime earum est aspernatur.
+		p.section-desc CTE is the premier technical organisation of BITS Goa. We operate with a hard working and motivated team that puts life and soul into any and all initiatives taken up by the organization. We organize many events in Collaboration with other organizations and receive both heavy participation and acclaim in such endeavors. We look forward to hearing from you!
 
 	section.gray
 		h2.section-title
