--- a/public/stylesheets/course.scss
+++ b/public/stylesheets/course.scss
@@ -17,7 +17,29 @@
   }
 }
 .courses {
-  display: flex;
+	display: flex;
+	flex-wrap: wrap;
+	@media screen and (max-width: 720px) {
+		justify-content: center;
+	}
+	.course-card {
+		flex-basis: 33.33%;
+		padding: 10px;
+		@media screen and (max-width: 1220px) and (min-width: 720px){
+			flex-basis: 50%;	
+		}
+		@media screen and (max-width: 720px) {
+			flex-basis: 80%;	
+		}
+		@media screen and (max-width: 540px){
+			flex-basis: 100%;	
+		}
+		.card {
+			width: 100%;
+			margin: 0;
+		}
+	}
+
   .card {
     transition: transform .3s ease;
     &:hover {
@@ -86,11 +108,15 @@
 
 	@media screen and (max-width: 960px){
 		flex-direction: column;		
+		.card {
+			width: 100%;
+			margin-left: 0;
+		}
 	}
 
   .card {
 		padding: 15px 30px;
-		@media screen and (max-width: 1200px){
+		@media screen and (max-width: 1200px) and (min-width: 960px){
 			width: 280px;	
 		}
 	}
