--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -12,15 +12,16 @@ block content
         h2#heading Courses This Sem
         .courses
           each course in courses
-            .card
-              .card-header
-                img(src=course.coverImage, alt="Thumbnail")
-                h2 #{course.name}
-              .card-body
-                p #{course.summary}
-              .card-footer
-                a.regBtn(href='/courses/' + course.id + '/view/')
-                  button.secondary View
+            .course-card
+              .card
+                .card-header
+                  img(src=course.coverImage, alt="Thumbnail")
+                  h2 #{course.name}
+                .card-body
+                  p #{course.summary}
+                .card-footer
+                  a.regBtn(href='/courses/' + course.id + '/view/')
+                    button.secondary View
     else
       .not-found
         img(src='/images/empty.png')
