--- a/views/index.pug
+++ b/views/index.pug
@@ -21,7 +21,7 @@ block content
 			.grid-items
 				div 
 					h4 Courses
-					p Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam iste fugiat corporis, earum cumque vero repudiandae voluptatibus quidem sequi quibusdam magni dolore aliquam sint unde animi delectus hic qui odio!
+					p Our longest running and most successful venture, courses is a great resource to expand your knowledge. Courses on a very wide array of topics ranging from music theory to robotics are taken by highly skilled and dedicated instructors from BITS goa who wish to pass on their knowledge and actively participate in the growth of campus tech culture
 
 				div 
 					h4 AAP
@@ -46,9 +46,10 @@ block content
 	section.gray
 		h2.section-title
 			span Our Team
-		p.section-desc Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique obcaecati pariatur debitis voluptates in reiciendis beatae hic temporibus odit eligendi, cumque, possimus facilis dolores suscipit dignissimos maxime earum est aspernatur.
+		p.section-desc With A Technical Department this big, come big responsibilities, which our team is used to handle.
 		.centre-flex
-			button.primary Meet the Team
+			a(href='/team')
+				button.primary Meet the Team
 
 	section#facts
 		h2 Some Interesting facts about us
@@ -74,6 +75,7 @@ block content
 	section.gray
 		h2.section-title
 			span FAQs
-		p.section-desc Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique obcaecati pariatur debitis voluptates in reiciendis beatae hic temporibus odit eligendi, cumque, possimus facilis dolores suscipit dignissimos maxime earum est aspernatur.
+		p.section-desc Wanna know how we go around our events? Wanna know how to enroll? Wanna know what else people ask us a lot?
 		.centre-flex
-			button.primary Get your answers
+			a(href='/faq')
+				button.primary Get your answers
