--- a/views/include/footer.pug
+++ b/views/include/footer.pug
@@ -1,11 +1,21 @@
 .footers
 	footer.pre
 		.container
-			ul
-				li About Us
-				li Deregistration
-				li Terms
-	
+			div#footer-info
+				span 
+					a(href='/team') About Us
+				span 
+					a(href='/faq') Deregistration
+				span 
+					a(href='/terms') Terms
+			div
+				a(href='https://www.facebook.com/ctebpgc/')
+					i.fa.fa-facebook-official(aria-hidden='true')
+				a(href='https://www.instagram.com/cte_bitsgoa/')
+					i.fa.fa-instagram(aria-hidden='true')
+				a(href='https://www.linkedin.com/company/center-for-technical-education-bits-goa')
+					i.fa.fa-linkedin-square(aria-hidden='true')
+
 	footer
 		p(align="center")
 			a(href='http://github.com/thelehhman') thelehhman
