--- a/views/index.pug
+++ b/views/index.pug
@@ -8,8 +8,9 @@ block head
 block content
 	section.hero
 		.container
-			h1 Lorem Ipsum Sit Dolor		
-			p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex.
+			h1#masthead Fostering Technical Culture.
+			h4 Since 2012
+			p We conduct courses,  workshops, host technical competitions, offer financial assistance to technical clubs and projects and organise academic help sessions
 			a(href="/courses")
 				button.primary Explore
 
