--- a/views/team.pug
+++ b/views/team.pug
@@ -7,7 +7,7 @@ block head
 block content
 	section#team
 		h1 Team
-		p Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident iure nemo cupiditate illum omnis corporis eum aspernatur necessitatibus asperiores magnam officiis animi, illo maiores tempora. Odio, eligendi? Recusandae, repellendus error.
+		p With A Technical Department this big, come big responsibilities, which our team is used to handle.
 		div.img-wrapper
 			h2 2019-20
 			img(src="/images/team/2019.jpg")
