--- a/public/stylesheets/faq.scss
+++ b/public/stylesheets/faq.scss
@@ -23,6 +23,7 @@ section#faq {
 		height: $radius*2;
 		bottom: -$radius;
 		left: calc(50vw - #{$radius});
+		box-shadow: 0 1px 2px 1px rgba(0, 0, 0, .1);
 	}
 }
 
