Course card spacing

--- a/public/stylesheets/course.scss
+++ b/public/stylesheets/course.scss
@@ -90,7 +90,7 @@
 			border-bottom: 8px solid $green;
 		}
 	}
-	.card-body {
+	.card-body, .card-header h2 {
 		padding: 0 30px;
 	}
 	.card-footer {
