--- a/views/catalog.pug
+++ b/views/catalog.pug
@@ -1,27 +1,36 @@
 extends layout
 
+mixin courseCard(course)
+  .course-card
+    .card
+      .card-header
+        img(src=course.coverImage, alt="Thumbnail")
+        h2 #{course.name}
+      .card-body
+        p #{course.summary}
+      .card-footer
+        a.regBtn(href='/courses/' + course.id + '/view/')
+          button.secondary View
+
 block head
   link(rel='stylesheet', href='/stylesheets/course.css')
   title Courses | CTE
 
 block content
   .catalog
-    if courses.length > 0
+    if CTE.length > 0
       section.hero.hero-overlay
       .container
         h2#heading Courses This Sem
         .courses
-          each course in courses
-            .course-card
-              .card
-                .card-header
-                  img(src=course.coverImage, alt="Thumbnail")
-                  h2 #{course.name}
-                .card-body
-                  p #{course.summary}
-                .card-footer
-                  a.regBtn(href='/courses/' + course.id + '/view/')
-                    button.secondary View
+          each course in CTE
+            +courseCard(course)
+        if CCE.length > 0
+          h2 Centre for Cultural Excellence
+          .courses
+            each course in CCE
+              +courseCard(course)
+
     else
       .not-found
         img(src='/images/empty.png')
