--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -13,6 +13,7 @@ header
 				block menu
 					a.navbar-item(href='/') Home
 					a.navbar-item(href='/courses') Courses
+					a.navbar-item(href='/archives') Archives
 					a.navbar-item(href='/team') Team
 					a.navbar-item(href='/faq') FAQ
 					if !signedIn
