Fix typo on landing page #10

--- a/views/index.pug
+++ b/views/index.pug
@@ -8,7 +8,7 @@ block head
 block content
 	section.hero
 		.container
-			h1#masthead Fostering Technical Culture.
+			h1#masthead Fostering Technical Culture
 			h4 Since 2012
 			p We conduct courses,  workshops, host technical competitions, offer financial assistance to technical clubs and projects and organise academic help sessions
 			a(href="/courses")
@@ -17,37 +17,37 @@ block content
 	section.white
 		h2.section-title 
 			span What we do
-		p.section-desc Center for Technical Education is a technical organisation of BITS Pilani, Goa Camus. Our motive is to enhance the technical culture on campus. We conduct courses and workshops, host technical competitions, offer financial assistance to technical clubs and projects and organize academic help sessions
+		p.section-desc Center for Technical Education is a technical organisation of BITS Pilani, Goa Campus. Our motive is to enhance the technical culture on campus. We conduct courses and workshops, host technical competitions, offer financial assistance to technical clubs and projects and organize academic help sessions
 		.container
 			.grid-items
 				div 
 					h4 Courses
-					p Our longest running and most successful venture, courses is a great resource to expand your knowledge. Courses on a very wide array of topics ranging from music theory to robotics are taken by highly skilled and dedicated instructors from BITS goa who wish to pass on their knowledge and actively participate in the growth of campus tech culture
+					p Our longest running and most successful venture, courses are a great resource to expand your knowledge. Courses on a very wide array of topics ranging from music theory to robotics are taken by highly skilled and dedicated instructors from BITS Goa who wish to pass on their knowledge and actively participate in the growth of technical culture on campus
 
 				div 
 					h4 AAP
-					p  A relatively new initiative, the Academic Assistance Programme has been a huge success in helping the students of BITS Goa grasp concepts, cover difficult problems and achieve excellence in class courses. The initiative empowers students to ask doubts and encounter problems under the guidance of highly motivated student mentors
+					p  A relatively new initiative, the Academic Assistance Programme has been a huge success in helping the students of BITS Goa grasp concepts, cover difficult problems and achieve excellence in academic courses. The initiative empowers students to ask doubts and encounter problems under the guidance of highly motivated student mentors
 
 				div 
 					h4 Tech Weekend
-					p To promote the technical culture on campus, CTE, in collaboration with other technical clubs on campus, organizes a weekend filled with hackathons and competitions. These events range from fields like finance to aero-space and helps students relax while encouraging healthy competition
+					p To promote the technical culture on campus, CTE, in collaboration with other technical clubs on campus, organizes a weekend filled with hackathons and competitions. These events range from fields like finance to aero-space and help students relax while encouraging healthy competition
 
 				div 
 					h4 Schooling
-					p Breaking boundaries and expectations as we expand beyond the walls of our campus and take up workshops and educational seminars in nearby schools, providing students with an early insight and piquing their interest in the current scenario of the technical world and it’s many opportunities 
+					p Breaking boundaries and expectations as we expand beyond the walls of our campus by taking up workshops and educational seminars in nearby schools, providing students with an early insight and piquing their interest in the current scenario of the technical world and its many opportunities 
 
 				div 
 					h4 CCE
-					p  CTE has extended it’s reach beyond technical courses as it introduces cultural courses like music and drama to it’s catalogue. This new initiative has seen wide ranging support and is bound to reach new heights as more and more clubs and departments join the initiative
+					p  CTE has extended its reach beyond technical courses as it introduces cultural courses like music and drama to its catalogue. This new initiative has seen wide ranging support and is bound to reach new heights as more and more clubs and departments join the initiative
 
 				div 
 					h4 Project Fundings
-					p  At Center for Technical Education, we believing in lending active support to creativity and innovation. CTE funds upto 10 projects with support upto Rs 40,000 to help student teams contribute to the development of technical culture on campus.
+					p  At CTE, we believe in lending active support to creativity and innovation. CTE funds up to 10 projects with support up to Rs 40,000 to help student teams contribute to the development of technical culture on campus
 
 	section.gray
 		h2.section-title
 			span Our Team
-		p.section-desc With A Technical Department this big, come big responsibilities, which our team is used to handle.
+		p.section-desc With a Technical Department this big, come big responsibilities, which our team is used to handle.
 		.centre-flex
 			a(href='/team')
 				button.primary Meet the Team
@@ -71,7 +71,7 @@ block content
 	section.white
 		h2.section-title
 			span Why collaborate with us?
-		p.section-desc CTE is the premier technical organisation of BITS Goa. We operate with a hard working and motivated team that puts life and soul into any and all initiatives taken up by the organization. We organize many events in Collaboration with other organizations and receive both heavy participation and acclaim in such endeavors. We look forward to hearing from you!
+		p.section-desc CTE is the premier technical organisation of BITS Goa. We operate with a hard working and motivated team that puts life and soul into any and all initiatives taken up by the organization. We organize many events in collaboration with other organizations and receive both heavy participation and acclaim in such endeavors. We look forward to hearing from you!
 
 	section.gray
 		h2.section-title
