Added Logos of collaborating clubs

--- a/views/index.pug
+++ b/views/index.pug
@@ -72,6 +72,37 @@ block content
 		h2.section-title
 			span Why collaborate with us?
 		p.section-desc CTE is the premier technical organisation of BITS Goa. We operate with a hard working and motivated team that puts life and soul into any and all initiatives taken up by the organization. We organize many events in Collaboration with other organizations and receive both heavy participation and acclaim in such endeavors. We look forward to hearing from you!
+		section.parent
+			div.child
+				img(src="/images/clublogos/abhigyaan.jpeg")
+			div.child
+				img(src="/images/clublogos/abhivyakti.jpeg")
+			div.child
+				img(src="/images/clublogos/cel.jpeg")
+			div.child 
+				img(src="/images/clublogos/sae.jpeg")
+			div.child 
+				img(src="/images/clublogos/devsoc.jpeg")
+			div.child
+				img(src="/images/clublogos/aero.jpeg")
+			div.child
+				img(src="/images/clublogos/drama.jpeg")
+			div.child
+				img(src="/images/clublogos/erc.jpeg")
+			div.child 
+				img(src="/images/clublogos/film.jpeg")
+			div.child 
+				img(src="/images/clublogos/kala.jpeg")
+			div.child
+				img(src="/images/clublogos/musoc.jpeg")
+			div.child
+				img(src="/images/clublogos/algo.jpeg")
+			div.child
+				img(src="/images/clublogos/sandbox.jpeg")
+			div.child
+				img(src="/images/clublogos/ieee.jpeg")
+			div.child
+				img(src="/images/clublogos/quark.jpeg")
 
 	section.gray
 		h2.section-title
