Course Page View Introduced

--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -1,5 +1,5 @@
 header
-	nav(role="navigation", aria-label="main navigation")
+	nav.main(role="navigation", aria-label="main navigation")
 		.container
 			.navbar-brand
 				a(href='/').navbar-item
